--- a/main.html
+++ b/main.html
@@ -10,7 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1>3 random images</h1>
+	<nav>
+		<a href="https://course.acciojob.com/modules">Home</a>
+		<a href="https://course.acciojob.com/modules">About us</a>
+		<a href="https://course.acciojob.com/modules">Contact us</a>
+	</nav>
+	<img src="https://picsum.photos/id/123/200/300" alt="hii">
+	<img src="https://picsum.photos/id/124/200/300" alt="bii">
+	<img src="https://picsum.photos/id/125/200/300" alt="hii">
 </body>
 
 </html>
